--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ llama-index = { extras = ["local_models"], version = "0.9.3" }
 watchdog = "^3.0.0"
 qdrant-client = "^1.6.9"
 chromadb = {version = "^0.4.13", optional = true}
+pymongo = "^4.6.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22"
